--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "big-integer": "^1.6.51",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
-    "mysql2": "^3.2.0"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.0",
+    "streamifier": "^0.1.1"
   }
 }
